--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "language-caos",
   "main": "./lib/language-caos",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A language used in the Creatures series of games: Creatures Agent Object Script",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "language-caos:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
